--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
       transform: translateX(-50%); /* Zentrierung durch Verschiebung */
       width: 100px;
       height: 100px;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/e/e7/Tetraodontidae_Pufferfish.jpg') no-repeat center;
-      background-size: cover;
       animation: swim 5s infinite ease-in-out;
     }
 
@@ -114,9 +112,6 @@
     <!-- Header -->
     <header>
       <h1>Alignment Methoden</h1>
-      <nav>
-        <a href="about.html">Über</a>
-      </nav>
     </header>
 
     <!-- Needleman-Wunsch -->
@@ -137,6 +132,11 @@
   </div>
 
   <!-- Pufferfisch -->
-  <div class="pufferfish"></div>
+  <svg class="pufferfish" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+    <circle cx="16" cy="16" r="10" fill="#f4c430" stroke="#000" stroke-width="1"></circle>
+    <circle cx="12" cy="14" r="1.5" fill="#000"></circle>
+    <circle cx="20" cy="14" r="1.5" fill="#000"></circle>
+    <path d="M14,20 Q16,22 18,20" fill="none" stroke="#000" stroke-width="1" />
+  </svg>
 </body>
 </html>
